--- a/app/app.html
+++ b/app/app.html
@@ -22,34 +22,34 @@
         typeof process !== 'object' ||
         (typeof process === 'object' && !process.env.START_HOT)
       ) {
-        const link = document.createElement('link');
-        link.rel = 'stylesheet';
-        link.href = './dist/style.css';
-        document.getElementsByTagName('head')[0].appendChild(link);
+        const link = document.createElement('link')
+        link.rel = 'stylesheet'
+        link.href = './dist/style.css'
+        document.getElementsByTagName('head')[0].appendChild(link)
       }
-    })();
+    })()
   </script>
 </head>
 <body>
 <div id='root'></div>
 <script>
   if (typeof process === 'object') {
-    const scripts = [];
+    const scripts = []
     if (process.env.NODE_ENV === 'development') {
-      scripts.push('../dll/renderer.dev.dll.js');
+      scripts.push('../dll/renderer.dev.dll.js')
     }
     if (process.env.START_HOT) {
-      const port = process.env.PORT || 1212;
-      scripts.push(`http://localhost:${port}/dist/renderer.dev.js`);
+      const port = process.env.PORT || 1212
+      scripts.push(`http://localhost:${port}/dist/renderer.dev.js`)
     } else {
-      scripts.push('./dist/renderer.prod.js');
+      scripts.push('./dist/renderer.prod.js')
     }
     if (scripts.length) {
       document.write(
         scripts
           .map((script) => `<script defer src='${script}'><\/script>`)
           .join('')
-      );
+      )
     }
   }
 </script>
